tests/paczka2/big_fuzzy/21562115.err
Error in line 1: CZUd A304 63,2
Error in line 4: bn4WWZWbBiw A304 16,7
Error in line 10: CZUd A434 40,7
Error in line 13: ObnAZv A434 31,3
Error in line 14: CZUd S334 56,4
Error in line 18: bn4WWZWbBiw A312 70,9
Error in line 16: ObnAZv A312 44,8
Error in line 21: bn4WWZWbBiw A304 92,4
Error in line 20: CZUd A304 58,2
Error in line 46: 2drp A434 16,5
Error in line 47: A304 A304 23,3
Error in line 53: 2drp A312 53,2
Error in line 60: ObnAZv S334 2,0
Error in line 68: bn4WWZWbBiw S334 21,8
Error in line 70: bn4WWZWbBiw A312 15,8
Error in line 82: 2drp S334 53,1
Error in line 88: 1JVgdfKI S334 32,4
Error in line 96: A304 S334 -2,0
Error in line 78: bn4WWZWbBiw S334 41,0
Error in line 126: lQqZ4U2hu A312 12,07
Error in line 121: CZUd A304 36,5
Error in line 142: 2drp A304 14,3
Error in line 154: 2drp A434 71,9
Error in line 157: A304 A434 60,9
Error in line 158: 2drp S334 74,4
Error in line 165: lQqZ4U2hu S334 72,86
Error in line 164: 2drp A304 51,5
Error in line 167: 2drp S334 54,6
Error in line 159: A304 A312 56,3
Error in line 150: bn4WWZWbBiw S334 368,6
Error in line 174: bn4WWZWbBiw A312 34,5
Error in line 187: ObnAZv S334 48,1
Error in line 176: lQqZ4U2hu S334 125,6
Error in line 194: Ag04 Ag04 82,6
Error in line 125: 1JVgdfKI A304 211,7
Error in line 179: A304 A304 35,3
Error in line 199: CZUd A304 3,5
Error in line 202: A304 S334 79,3
Error in line 219: bn4WWZWbBiw A312 72,3
Error in line 217: 2drp A312 13,0
Error in line 211: 1JVgdfKI A304 236,8
Error in line 230: 1JVgdfKI S334 6,5
Error in line 234: bn4WWZWbBiw A312 86,8
Error in line 232: A304 A434 27,8
Error in line 240: A304 A304 42,75
Error in line 245: 2drp S334 s3,2
Error in line 248: ObnAZv S334 17,03
